Creadas carpetas partials, modules y vendor, añadidos los archivos reset.scss, base.scss, forms.scss, menus.scss y slider.scss

--- a/estilos.scss
+++ b/estilos.scss
@@ -1,3 +1,11 @@
+@import 'partials/reset';
+@import 'partials/base';
+
+@import 'modules/forms';
+@import 'modules/menus';
+
+@import 'vendor/slider';
+
 $fuente: arial;
 $color1: #FF2E2F;
 
