Añadiendo contenido al index.html para poder trabajar con el, navbar, jumbotron, cards, footer

--- a/estilos.scss
+++ b/estilos.scss
@@ -7,7 +7,8 @@
 @import 'vendor/slider';
 
 $fuente: arial;
-$color1: #FF2E2F;
+$color1: black;
+$colorTexto: #FF2E2F;
 
 body {
   font-family: $fuente;
